--- a/style.css
+++ b/style.css
@@ -65,6 +65,40 @@ font-family: fantasy;
 
 }
 
+a{
+font-family: 'Source Sans Pro', sans-serif;
+letter-spacing: 4px;
+background-color: #25252A;
+}
+
+.container{
+display: flex;
+flex-direction: row;
+justify-content: space-evenly;
+align-items: center;
+text-align: center;
+}
+
+.btn-1{
+   width: 300px;
+   hieght: 100px;
+   border: none;
+   color: white;
+   background-color: rgb(255, 0, 68);
+   border-radios: 4px;
+   box-shadow: inset 0 0 0 0 #f9e506;
+   transition: ease-out 0.3s;
+   font-size: 2rem;
+   outline: none;
+}
+
+
+.btn-1:hover{
+   box-shadow: inset 300px 0 0 0 #f9e506;
+}
+
+
+
 
 
 
